<resources>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="app_name">certoscale</string>
    <string name="hello_world">Hello world!</string>
    <string name="preferences_animal_activated">preferences_animal_activated</string>
    <string name="preferences_animal_auto_mode">preferences_animal_auto_mode</string>
    <string name="preferences_animal_lock">preferences_animal_lock</string>
    <string name="preferences_check_limitmode">preferences_check_limitmode</string>
    <string name="preferences_check_displayoptions">preferences_check_displayoptions</string>
    <string name="preferences_animal_secondary_visible">preferences_animal_secondary_visible</string>
    <string name="preferences_animal_measuringtime_visible">preferences_animal_measuringtime_visible</string>
    <string name="preferences_animal_brutto_visible">preferences_animal_brutto_visible</string>
    <string name="preferences_animal_netto_visible">preferences_animal_netto_visible</string>
    <string name="preferences_animal_tara_visible">preferences_animal_tara_visible</string>
    <string name="preferences_animal_print_measuring">preferences_animal_print_measuring</string>
    <string name="preferences_check_activated">preferences_check_activated</string>
    <string name="preferences_check_auto_mode">preferences_check_auto_mode</string>
    <string name="preferences_check_lock">preferences_check_lock</string>
    <string name="preferences_check_secondary_visible">preferences_check_secondary_visible</string>
    <string name="preferences_check_over_visible">preferences_check_over_visible</string>
    <string name="preferences_check_under_visible">preferences_check_under_visible</string>
    <string name="preferences_check_brutto_visible">preferences_check_brutto_visible</string>
    <string name="preferences_check_netto_visible">preferences_check_netto_visible</string>
    <string name="preferences_check_tara_visible">preferences_check_tara_visible</string>
    <string name="preferences_check_target_visible">preferences_check_target_visible</string>
    <string name="preferences_check_overtolerance_visible">preferences_check_overtolerance_visible</string>
    <string name="preferences_check_undertolerance_visible">preferences_check_undertolerance_visible</string>
    <string name="preferences_check_print_target">preferences_check_print_target</string>
    <string name="preferences_check_print_overtolerance">preferences_check_print_overtolerance</string>
    <string name="preferences_check_print_undertolerance">preferences_check_print_undertolerance</string>
    <string name="preferences_check_print_overlimit">preferences_check_print_overlimit</string>
    <string name="preferences_check_print_underlimit">preferences_check_print_underlimit</string>
    <string name="preferences_density_activated">preferences_density_activated</string>
    <string name="preferences_density_lock">preferences_density_lock</string>
    <string-array name="preferences_density_mode">
        <item>Solid density higher than Water</item>
        <item>Solid density lower than Water </item>
        <item>Liquid Density  </item>

    </string-array>
    <string name="preferences_density_liquidtyp">preferences_density_liquidtyp</string>
    <string name="preferences_density_porous">preferences_density_porous</string>
    <string name="preferences_density_autosample">preferences_density_autosample</string>
    <string name="preferences_denisty_Liquid_visible">preferences_denisty_Liquid_visible</string>
    <string name="preferences_density_watertemp_visible">preferences_density_watertemp_visible</string>
    <string name="preferences_density_oildensity_visible">preferences_density_oildensity_visible</string>
    <string name="preferences_density_weightair_visible">preferences_density_weightair_visible</string>
    <string name="preferences_density_oiledweight_visible">preferences_density_oiledweight_visible</string>
    <string name="preferences_density_weightliquid_visible">preferences_density_weightliquid_visible</string>
    <string name="preferences_density_sinkervolume_visible">preferences_density_sinkervolume_visible</string>
    <string name="preferences_density_porous_print">preferences_density_porous_print</string>
    <string name="preferences_density_liquidtype_print">preferences_density_liquidtype_print</string>
    <string name="preferences_peak_activated">preferences_peak_activated</string>
    <string name="preferences_peak_lock">preferences_peak_lock</string>
    <string name="preferences_peak_mode">preferences_peak_mode</string>
    <string name="preferences_peak_stableonly">preferences_peak_stableonly</string>
    <string name="preferences_peak_brutto_visible">preferences_peak_brutto_visible</string>
    <string name="preferences_peak_netto_visible">preferences_peak_netto_visible</string>
    <string name="preferences_peak_tara_visible">preferences_peak_tara_visible</string>
    <string name="preferences_peak_print_stableonly">preferences_peak_print_stableonly</string>
    <string name="preferences_calibration_internal">preferences_calibration_internal</string>
    <string name="preferences_calibration_automatic">preferences_calibration_automatic</string>
    <string name="preferences_communication_socket_connected">preferences_communication_socket_connected</string>
    <string name="internal_calibration">Internal calibration</string>
    <string name="under_limit">Under limit</string>
    <string name="over_limit">Over limit</string>
    <string name="target">Target</string>
    <string name="tara">Tare</string>
    <string name="brutto">Gross</string>
    <string name="netto">Net</string>
    <string name="under_toleranc">Under tolerance</string>
    <string name="over_tolerance">Over tolerance</string>
    <string name="user_settings">User settings</string>
    <string name="calibration">Calibration</string>
    <string name="library">Library</string>
    <string name="device_settings">Device settings</string>
    <string name="application_settings">Application settings</string>
    <string name="balance_setup">Balance setup</string>
    <string name="activated">Activated</string>
    <string name="turn_the_application_on_off">Turn the application on/off</string>
    <string name="lock">Lock</string>
    <string name="auto_mode">Auto mode</string>
    <string name="enable_disable_features">ENABLE / DISABLE FEATURES</string>
    <string name="visibility">VISIBILITY</string>
    <string name="printer_options">Printer Options</string>
    <string name="lock_the_settings_of_this">Lock the settings of this application</string>
    <string name="turn_this_feature_on_off">Turn this feature on/off</string>
    <string name="turn_this_value_visible_invisible">Turn this value visible/invisible</string>
    <string name="print_this_property_yes_no">print this property yes/no</string>
    <string name="limit_mode">Limit Mode</string>
    <string name="select_the_limit_settings">Select Limit Settings</string>
    <string name="display_options">Display Options</string>
    <string name="select_statistics">Select statistics</string>
    <string name="measuring_time">Measuring Time</string>
    <string name="auto_sample_mode">Auto Sample Mode</string>
    <string name="select_operation_mode">Select operation mode</string>
    <string name="only_stable_weights">Only Stable Weight</string>
    <string name="weighing_units">Weighing Units</string>
    <string name="protocol_printer">Protocol printer</string>
    <string name="barcode_or_qr_code_scanner">Barcode or QR-code scanner</string>
    <string name="balance">Balance</string>
    <string name="balance_model">Balance model</string>
    <string name="certocloud_push_notification_service">CertoCloud push notification service</string>
    <string name="label_printer">Label printer</string>
    <string name="baudrate">Baudrate</string>
    <string name="tab_to_choose_baudrate">Tab to choose baudrate</string>
    <string name="tab_to_choose_the_data_bits_stop_bits_and_parity">Tab to choose the data bits, stop bit, and parity</string>
    <string name="transmission_standard">Transmission_standard</string>
    <string name="tab_to_choose_the_flow_control_mode">Tab to choose the flow control mode</string>
    <string name="handshake">Handshake</string>
    <string name="preferences_communication_list_handshake">preferences_communication_list_handshake</string>
    <string name="user_calibration">User calibration</string>
    <string name="calibration_test">Calibration test</string>
    <string name="span_calibration">Span calibration</string>
    <string name="automatic_calibration_adjustment">Automatic calibration adjustment</string>
    <string name="turn_automatic_calibration_on_off">Turn automatic calibration ON/OFF</string>
    <string name="preferences_calibration_adjustment">preferences_calibration_adjustment</string>
    <string name="preferences_calibration_span">preferences_calibration_span</string>
    <string name="preferences_calibration_user">preferences_calibration_user</string>
    <string name="preferences_calibration_test">preferences_calibration_test</string>
    <string name="glp_and_gmp_data">GLP and GMP data</string>
    <string name="preferences_communication_list_baudrate_label">preferences_communication_list_baudrate_label</string>
    <string name="preferences_lockout_calibration">preferences_lockout_calibration</string>
    <string name="preferences_lockout_user_settings">preferences_lockout_user_settings</string>
    <string name="preferences_lockout_balance_setup">preferences_lockout_balance_setup</string>
    <string name="preferences_lockout_application_modes">preferences_lockout_application_modes</string>
    <string name="preferences_lockout_weighing_units">preferences_lockout_weighing_units</string>
    <string name="preferences_lockout_glp">preferences_lockout_glp</string>
    <string name="preferences_lockout_communication">preferences_lockout_communication</string>
    <string name="preferences_lockout_library">preferences_lockout_library</string>
    <string name="preferences_lockout_factory_reset">preferences_lockout_factory_reset</string>
    <string name="lock_the_calibration">Lock the calibration</string>
    <string name="lock_the_user_settings">Lock the user settings</string>
    <string name="lock_the_balance_setup">Lock the balance setup</string>
    <string name="application_modes">Application modes</string>
    <string name="lock_the_application_modes">Lock the application modes</string>
    <string name="lock_the_weighing_units">Lock the weighing units</string>
    <string name="lock_the_glp_and_gmp_data">Lock the GLP and GMP data</string>
    <string name="communication">Communication</string>
    <string name="lock_the_communication_settings">Lock the communication settings</string>
    <string name="lock_the_library">Lock the library</string>
    <string name="i_o_settings">I/O Settings</string>
    <string name="lock_the_i_o_settings">Lock the I/O settings</string>
    <string name="lock_the_factory_reset">Lock the factory reset</string>
    <string name="factory_reset_menu">Factory reset menu</string>
    <string name="preferences_reset_user_settings">preferences_reset_user_settings</string>
    <string name="preferences_reset_device_settings">preferences_reset_device_settings</string>
    <string name="preferences_reset_application">preferences_reset_application</string>
    <string name="preferences_reset_units">preferences_reset_units</string>
    <string name="preferences_reset_glp">preferences_reset_glp</string>
    <string name="preferences_reset_communication">preferences_reset_communication</string>
    <string name="preferences_reset_complete">preferences_reset_complete</string>
    <string name="reset_all">Reset all</string>
</resources>