<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/enable_disable_features" >
        <CheckBoxPreference
            android:key="@string/preferences_peak_activated"
            android:defaultValue="@bool/preferences_peak_activated"
            android:title="@string/activated"
            android:summary="@string/turn_the_application_on_off"
            android:dependency="@string/preferences_peak_lock" >
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="@string/preferences_peak_lock"
            android:defaultValue="@bool/preferences_peak_lock"
            android:title="@string/lock"
            android:summary="@string/lock_the_settings_of_this"
            android:disableDependentsState="true" >
        </CheckBoxPreference>

        <ListPreference
            android:key="@string/preferences_peak_mode"
            android:title="@string/auto_sample_mode"
            android:summary="@string/select_operation_mode"
            android:dependency="@string/preferences_peak_lock"
            android:defaultValue="1"
            android:entries="@array/preferences_peak_modes"
            android:entryValues="@array/preferences_peak_modes_value"

            />

        <CheckBoxPreference
            android:key="@string/preferences_peak_stableonly"
            android:defaultValue="@bool/preferences_peak_stableonly"
            android:title="@string/only_stable_weights"
            android:summary="@string/turn_this_feature_on_off"
            android:dependency="@string/preferences_peak_lock" >
        </CheckBoxPreference>




    </PreferenceCategory>

    <PreferenceCategory android:title="@string/visibility" >


        <CheckBoxPreference
            android:key="@string/preferences_peak_brutto_visible"
            android:defaultValue="@bool/preferences_peak_brutto_visible"
            android:title="@string/brutto"
            android:summary="@string/turn_this_value_visible_invisible"
            android:dependency="@string/preferences_peak_lock" >
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="@string/preferences_peak_netto_visible"
            android:defaultValue="@bool/preferences_peak_netto_visible"
            android:title="@string/netto"
            android:summary="@string/turn_this_value_visible_invisible"
            android:dependency="@string/preferences_peak_lock" >
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="@string/preferences_peak_tara_visible"
            android:defaultValue="@bool/preferences_peak_tara_visible"
            android:title="@string/tara"
            android:summary="@string/turn_this_value_visible_invisible"
            android:dependency="@string/preferences_peak_lock" >
        </CheckBoxPreference>


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/printer_options" >
        <CheckBoxPreference
            android:key="@string/preferences_peak_print_stableonly"
            android:defaultValue="@bool/preferences_peak_print_stableonly"
            android:title="@string/only_stable_weights"
            android:summary="@string/print_this_property_yes_no"
            android:dependency="@string/preferences_peak_lock" >
        </CheckBoxPreference>

    </PreferenceCategory>


</PreferenceScreen>