<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/enable_disable_features" >
        <CheckBoxPreference
        android:key="@string/preferences_animal_activated"
        android:defaultValue="@bool/preferences_animal_activated_default"
        android:title="@string/activated"
        android:summary="@string/turn_the_application_on_off"
        android:dependency="@string/preferences_animal_lock" >
    </CheckBoxPreference>

        <CheckBoxPreference
            android:key="@string/preferences_animal_lock"
            android:defaultValue="@bool/preferences_animal_lock"
            android:title="@string/lock"
            android:summary="@string/lock_the_settings_of_this"
            android:disableDependentsState="true">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="@string/preferences_animal_auto_mode"
            android:defaultValue="@bool/preferences_animal_auto_mode"
            android:title="@string/auto_mode"
            android:summary="@string/turn_this_feature_on_off"
            android:dependency="@string/preferences_animal_lock" >
            android:disableDependentsState="true">
        </CheckBoxPreference>

        <!---
        <ListPreference
            android:key="@string/preferences_check_limitmode"
            android:title="Auto Sample Weighing Mode"
            android:dependency="@string/preferences_animal_lock"
            />
         -->


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/visibility" >



        <CheckBoxPreference
            android:key="@string/preferences_animal_measuringtime_visible"
            android:defaultValue="@bool/preferences_animal_measuringtime_visible"
            android:title="@string/measuring_time"
            android:summary="@string/turn_this_value_visible_invisible"
            android:dependency="@string/preferences_animal_lock" >
        </CheckBoxPreference>




        <CheckBoxPreference
            android:key="@string/preferences_animal_brutto_visible"
            android:defaultValue="@bool/preferences_animal_brutto_visible"
            android:title="@string/brutto"
            android:summary="@string/turn_this_value_visible_invisible"
            android:dependency="@string/preferences_animal_lock"  >
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="@string/preferences_animal_netto_visible"
            android:defaultValue="@bool/preferences_animal_netto_visible"
            android:title="@string/netto"
            android:summary="@string/turn_this_value_visible_invisible"
            android:dependency="@string/preferences_animal_lock"  >
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="@string/preferences_animal_tara_visible"
            android:defaultValue="@bool/preferences_animal_tara_visible"
            android:title="@string/tara"
            android:summary="@string/turn_this_value_visible_invisible"
            android:dependency="@string/preferences_animal_lock"  >
        </CheckBoxPreference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/printer_options" >
        <CheckBoxPreference
            android:key="@string/preferences_animal_print_measuring"
            android:defaultValue="@bool/preferences_animal_print_measuring"
            android:title="@string/measuring_time"
            android:summary="@string/print_this_property_yes_no"
            android:dependency="@string/preferences_animal_lock"  >
        </CheckBoxPreference>



    </PreferenceCategory>


</PreferenceScreen>