








<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/enable_disable_features" >
        <CheckBoxPreference
        android:key="@string/preferences_check_activated"
        android:defaultValue="@bool/preferences_check_activated"
        android:title="@string/activated"
        android:summary="@string/turn_the_application_on_off"
        android:dependency="@string/preferences_check_lock" >
    </CheckBoxPreference>

        <CheckBoxPreference
            android:key="@string/preferences_check_lock"
            android:defaultValue="@bool/preferences_check_lock"
            android:title="@string/lock"
            android:summary="@string/lock_the_settings_of_this"
            android:disableDependentsState="true">
        </CheckBoxPreference>

        <ListPreference
            android:key="@string/preferences_check_limitmode"
            android:defaultValue="1"
            android:entries="@array/preferences_check_modes"
            android:entryValues="@array/preferences_check_modes_value"
            android:title="@string/limit_mode"
            android:summary="@string/select_the_limit_settings"
            android:dependency="@string/preferences_check_lock"
            />



        <ListPreference
            android:key="@string/preferences_check_displayoptions"
            android:title="@string/display_options"
            android:defaultValue="1"
            android:entries="@array/preferences_check_display_modes"
            android:entryValues="@array/preferences_check_display_modes_value"
            android:summary="@string/select_statistics"
            android:dependency="@string/preferences_check_lock"
            />

        <CheckBoxPreference
            android:key="@string/preferences_check_auto_mode"
            android:defaultValue="@bool/preferences_check_auto_mode"
            android:title="@string/auto_mode"
            android:summary="@string/turn_this_feature_on_off"
            android:dependency="@string/preferences_check_lock"
            android:disableDependentsState="true">
        </CheckBoxPreference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/visibility" >



        <CheckBoxPreference
            android:key="@string/preferences_check_over_visible"
            android:defaultValue="@bool/preferences_check_over_visible"
            android:title="@string/over_limit"
            android:summary="@string/turn_this_value_visible_invisible"
            android:dependency="@string/preferences_check_lock" >
        </CheckBoxPreference>


        <CheckBoxPreference
            android:key="@string/preferences_check_under_visible"
            android:defaultValue="@bool/preferences_check_under_visible"
            android:title="@string/under_limit"
            android:summary="@string/turn_this_value_visible_invisible"
            android:dependency="@string/preferences_check_lock">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="@string/preferences_check_brutto_visible"
            android:defaultValue="@bool/preferences_check_brutto_visible"
            android:title="@string/brutto"
            android:summary="@string/turn_this_value_visible_invisible"
            android:dependency="@string/preferences_check_lock">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="@string/preferences_check_netto_visible"
            android:defaultValue="@bool/preferences_check_netto_visible"
            android:title="@string/netto"
            android:summary="@string/turn_this_value_visible_invisible"
            android:dependency="@string/preferences_check_lock">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="@string/preferences_check_tara_visible"
            android:defaultValue="@bool/preferences_check_tara_visible"
            android:title="@string/tara"
            android:summary="@string/turn_this_value_visible_invisible"
            android:dependency="@string/preferences_check_lock">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="@string/preferences_check_target_visible"
            android:defaultValue="@bool/preferences_check_target_visible"
            android:title="@string/target"
            android:summary="@string/turn_this_value_visible_invisible"
            android:dependency="@string/preferences_check_lock">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="@string/preferences_check_overtolerance_visible"
            android:defaultValue="@bool/preferences_check_overtolerance_visible"
            android:title="@string/over_tolerance"
            android:summary="@string/turn_this_value_visible_invisible"
            android:dependency="@string/preferences_check_lock">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="@string/preferences_check_undertolerance_visible"
            android:defaultValue="@bool/preferences_check_undertolerance_visible"
            android:title="@string/under_toleranc"
            android:summary="@string/turn_this_value_visible_invisible"
            android:dependency="@string/preferences_check_lock">
        </CheckBoxPreference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/printer_options" >
        <CheckBoxPreference
            android:key="@string/preferences_check_print_target"
            android:defaultValue="@bool/preferences_check_print_target"
            android:title="@string/target"
            android:summary="@string/print_this_property_yes_no"
            android:dependency="@string/preferences_check_lock">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="@string/preferences_check_print_overtolerance"
            android:defaultValue="@bool/preferences_check_print_overtolerance"
            android:title="@string/over_tolerance"
            android:summary="@string/print_this_property_yes_no"
            android:dependency="@string/preferences_check_lock">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="@string/preferences_check_print_undertolerance"
            android:defaultValue="@bool/preferences_check_print_undertolerance"
            android:title="@string/under_toleranc"
            android:summary="@string/print_this_property_yes_no"
            android:dependency="@string/preferences_check_lock">
        </CheckBoxPreference>


        <CheckBoxPreference
            android:key="@string/preferences_check_print_overlimit"
            android:defaultValue="@bool/preferences_check_print_overlimit"
            android:title="@string/over_limit"
            android:summary="@string/print_this_property_yes_no"
            android:dependency="@string/preferences_check_lock">
        </CheckBoxPreference>


        <CheckBoxPreference
            android:key="@string/preferences_check_print_underlimit"
            android:defaultValue="@bool/preferences_check_print_underlimit"
            android:title="@string/under_limit"
            android:summary="@string/print_this_property_yes_no"
            android:dependency="@string/preferences_check_lock">
        </CheckBoxPreference>



    </PreferenceCategory>


</PreferenceScreen>