<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="preferences_communication_lims"
        android:title="LIMS"
        android:summary="Connected on COM 2" />

    <CheckBoxPreference
        android:key="preferences_communication_labelprinter"
        android:title="@string/label_printer"
        android:summary="Connected on COM 1">
    </CheckBoxPreference>


    <CheckBoxPreference
        android:key="preferences_communication_protocolprinter"
        android:title="@string/protocol_printer"
        android:summary="Connected on COM 3">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="preferences_communication_scanner"
        android:title="@string/barcode_or_qr_code_scanner"
        android:summary="Connected on USB HOST">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="preferences_communication_balance"
        android:title="@string/balance"
        android:summary="Connected to COM 4" />

    <ListPreference
        android:key="preferences_communication_list_devices"
        android:title="@string/balance_model"
        android:summary="Tab to choose connected model"
        android:defaultValue="1"
        android:entries="@array/preferences_communication_string_array_devices"
        android:entryValues="@array/preferences_communication_list_devices_values"
        />

    <Preference
        android:key="@string/preferences_communication_socket_connected"
        android:title="@string/certocloud_push_notification_service"
        android:summary="@string/connected" />

</PreferenceScreen>



